search_item.html

--- a/search_item.html
+++ b/search_item.html
@@ -53,14 +53,18 @@
                     <div class="firs">
                         <h2>Status:</h2>
                         <select>
-                            <option></option>
+                            <option>Lost</option>
+                            <option>Found</option>
                         </select>
                     </div>
 
                     <div class="seco">
                         <h2>Category:</h2>
                         <select>
-                            <option></option>
+                            <option>Electronics</option>
+                            <option>Cloth</option>
+                            <option>Documents</option>
+                            <option>Keys</option>
                         </select>
                     </div>
 
@@ -71,7 +75,11 @@
                 </div>
 
                 <div class="date_Sec">
-                    <h2>Date</h2>
+                    <h2>Date:</h2>
+                    <form>
+                        <input type="datetime-local" id="meeting" name="meeting">
+                    </form>
+
                 </div>
 
                 <div class="image_containers1">
@@ -85,9 +93,9 @@
                         </div>
 
                         <div class="detl1">
-                            <h3>Status: </h3>
-                            <h3>Location: </h3>
-                            <h3>Date: </h3>
+                            <h3>Status:</h3> <span> Lost</span>
+                            <h3>Location:</h3> <span> Library</span>
+                            <h3>Date:</h3> <span> Sep 4, 2025 </span>
                         </div>
 
                         <div class="claim_btn">
@@ -98,17 +106,17 @@
 
                     <div class="frame1">
                         <div class="image">
-                            <img src="watch.jpg" width="150" height="110">
+                            <img src="wallet.jpg" width="150" height="110">
                         </div>
 
                         <div id="heading">
-                            <h2>Watch</h2>
+                            <h2>Wallet</h2>
                         </div>
 
                         <div class="detl1">
-                            <h3>Status: </h3>
-                            <h3>Location: </h3>
-                            <h3>Date: </h3>
+                            <h3>Status:</h3> <span> Lost</span>
+                            <h3>Location:</h3> <span> Ground</span>
+                            <h3>Date:</h3> <span> Sep 6,2025 </span>
                         </div>
 
                         <div class="claim_btn">
@@ -119,17 +127,17 @@
 
                     <div class="frame1">
                         <div class="image">
-                            <img src="watch.jpg" width="150" height="110">
+                            <img src="bag.jpg" width="150" height="110">
                         </div>
 
                         <div id="heading">
-                            <h2>Watch</h2>
+                            <h2>Bag</h2>
                         </div>
 
                         <div class="detl1">
-                            <h3>Status: </h3>
-                            <h3>Location: </h3>
-                            <h3>Date: </h3>
+                            <h3>Status:</h3> <span> Lost</span>
+                            <h3>Location:</h3> <span> BA Block</span>
+                            <h3>Date:</h3> <span> Sep 16, 2025 </span>
                         </div>
 
                         <div class="claim_btn">
@@ -142,17 +150,17 @@
                 <div class="image_containers2">
                     <div class="frame1">
                         <div class="image">
-                            <img src="watch.jpg" width="150" height="110">
+                            <img src="phone.jpg" width="150" height="110">
                         </div>
 
                         <div id="heading">
-                            <h2>Watch</h2>
+                            <h2>Smartphone</h2>
                         </div>
 
                         <div class="detl1">
-                            <h3>Status: </h3>
-                            <h3>Location: </h3>
-                            <h3>Date: </h3>
+                            <h3>Status:</h3> <span> Lost</span>
+                            <h3>Location:</h3> <span> College Gate</span>
+                            <h3>Date:</h3> <span> Sep 24, 2025 </span>
                         </div>
 
                         <div class="claim_btn">
@@ -163,17 +171,17 @@
 
                     <div class="frame1">
                         <div class="image">
-                            <img src="watch.jpg" width="150" height="110">
+                            <img src="earphones.jpg" width="150" height="110">
                         </div>
 
                         <div id="heading">
-                            <h2>Watch</h2>
+                            <h2>Earbuds</h2>
                         </div>
 
                         <div class="detl1">
-                            <h3>Status: </h3>
-                            <h3>Location: </h3>
-                            <h3>Date: </h3>
+                            <h3>Status:</h3> <span> Lost</span>
+                            <h3>Location:</h3> <span> Sports Room</span>
+                            <h3>Date:</h3> <span> Oct 2, 2025 </span>
                         </div>
 
                         <div class="claim_btn">
@@ -184,17 +192,17 @@
 
                     <div class="frame1">
                         <div class="image">
-                            <img src="watch.jpg" width="150" height="110">
+                            <img src="keys.jpg" width="150" height="110">
                         </div>
 
                         <div id="heading">
-                            <h2>Watch</h2>
+                            <h2>Key</h2>
                         </div>
 
                         <div class="detl1">
-                            <h3>Status: </h3>
-                            <h3>Location: </h3>
-                            <h3>Date: </h3>
+                            <h3>Status:</h3> <span> Lost</span>
+                            <h3>Location:</h3> <span> Lab</span>
+                            <h3>Date:</h3> <span> Oct 29, 2025 </span>
                         </div>
 
                         <div class="claim_btn">
@@ -203,19 +211,33 @@
 
                     </div>
                 </div>
-
-
             </div>
-
-
-
         </div>
 
+        <footer>
+            <div class="first_footer">
+                <div class="copyright_sec">
+                    <h2>© 2025</h2>
+                    <h2>Lost & Found Portal</h2>
+                </div>
 
 
+                <div class="icons">
+                    <a href="#"><img src="facebookicon.png" width="50"></a>
+                    <a href="#"><img src="x_icon.png" width="50"></a>
+                    <a href="#"><img src="Instagram_icon.png" width="50"></a>
+                </div>
 
+                <div class="footer_nav">
+                    <a href="#">About us</a>
+                    <a href="#">Contact</a>
+                    <a href="#">Privacy Policy</a>
+                </div>
+            </div>
+        </footer>
 
     </div>
+
 </body>
 
 </html>
